--- a/src/app/common/home/home.component.html
+++ b/src/app/common/home/home.component.html
@@ -1,12 +1,41 @@
-<div class="card" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-pTooltip">Home Page</h5>
-    <h6 class="card-subpTooltip mb-2 text-muted">Services List</h6>
-    <p class="card-text">This page contains the list of services provided, along with links.</p>
-    <button routerLink="/register" pTooltip="Sign Up!" class="btn btn-primary card-link">Register</button>
-    <button routerLink="/login" pTooltip="Login Screen" class="btn btn-primary card-link">Login</button>
-  </div>
-</div>
-<section>
-  <div class="snow1"></div>
-</section>
+<table>
+  <tr>
+    <td style="width: 33%;">
+      <div class="card" style="width: 18rem; height:15rem">
+        <div class="card-body">
+          <h5 class="card-pTooltip">Home Page</h5>
+          <h6 class="card-subpTooltip mb-2 text-muted">Services List</h6>
+          <p class="card-text">This page contains the list of services provided, along with links.</p>
+          <button routerLink="/register" pTooltip="Sign Up!" class="btn btn-primary card-link">Register</button>
+          <button routerLink="/login" pTooltip="Login Screen" class="btn btn-primary card-link">Login</button>
+        </div>
+      </div>
+    </td>
+    <td style="width: 33%;">
+      <div class="card" style="width: 18rem; height:15rem">
+        <div class="card-body">
+          <h5 class="card-pTooltip">Would you like a Holiday?</h5>
+          <h6 class="card-subpTooltip mb-2 text-muted">Locations List</h6>
+          <p class="card-text">Darjeeling?, Kodaikanal? Ooty.. perhaps?</p>
+          <button routerLink="/register" pTooltip="Yet To Implement" class="btn btn-primary card-link">View
+            Packages</button>
+          <button routerLink="/custWelcome/tourBooking" pTooltip="Login Screen" class="btn btn-primary card-link">Book
+          </button>
+        </div>
+      </div>
+    </td>
+    <td style="width: 33%;">
+      <div class="card" style="width: 18rem; height:15rem">
+        <div class="card-body">
+          <h5 class="card-pTooltip">Do you have a business trip?</h5>
+          <h6 class="card-subpTooltip mb-2 text-muted">We have our services in lot of cities..</h6>
+          <p class="card-text">Hyderabad,Madras,Bangalore</p>
+          <button routerLink="/register" pTooltip="Yet To Implement" class="btn btn-primary card-link">List
+            Locations</button>
+          <button routerLink="/custWelcome/roomReg" pTooltip="Login Screen" class="btn btn-primary card-link">Book
+            Tours</button>
+        </div>
+      </div>
+    </td>
+  </tr>
+</table>
