--- a/src/app/emp-home/emp-home.component.html
+++ b/src/app/emp-home/emp-home.component.html
@@ -65,9 +65,8 @@
 </div>
 
 <p-table #billTable *ngIf="requestList?.length>0" [style]="{'width':'70%','margin-top':'8px'}" [value]="requestList"
-  [paginator]="true" [showCurrentPageReport]="true"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[3, 5,7]"
-  [rows]="10">
+  [paginator]="true" [showCurrentPageReport]="true" [rows]="10" [rowsPerPageOptions]="[3, 5,7]"
+  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
       <th>Request Id
@@ -87,10 +86,9 @@
     </tr>
   </ng-template>
   <ng-template pTemplate="summary">
-    <button style="text-align: left;" download="bill.pdf" pTooltip="Download & Print the bill" class="btn btn-primary"
-      (click)="getFile();">Print</button>
-    <button style="float: right;" download="bill.pdf" pTooltip="Mail the bill to User" class="btn btn-primary"
-      (click)="mailBillToUser();">Send to
-      User</button>
+    <a style="text-align: left;" download="bill.pdf" pTooltip="Download & Print the bill" class="btn btn-primary"
+      (click)="getFile();">Print</a>
+    <button style="float: right;" pTooltip="Mail the bill to User" class="btn btn-primary"
+      (click)="mailBillToUser();">Send to User</button>
   </ng-template>
 </p-table>
