Bill Pdf and send Mail

--- a/src/app/emp-home/emp-home.component.html
+++ b/src/app/emp-home/emp-home.component.html
@@ -64,9 +64,9 @@
   </table>
 </div>
 
-<p-table #billTable *ngIf="requestList?.length>0" [style]="{'width':'70%','margin-top':'8px'}" [value]="requestList"
-  [paginator]="true" [showCurrentPageReport]="true" [rows]="10" [rowsPerPageOptions]="[3, 5,7]"
-  currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
+<p-table #billTable *ngIf="pendingBillList?.length>0" [style]="{'width':'70%','margin-top':'8px'}"
+  [value]="pendingBillList" [paginator]="true" [showCurrentPageReport]="true" [rows]="10"
+  [rowsPerPageOptions]="[3, 5,7]" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries">
   <ng-template pTemplate="header">
     <tr>
       <th>Request Id
