--- a/src/app/adm-home/employee-management/employee-management.component.html
+++ b/src/app/adm-home/employee-management/employee-management.component.html
@@ -28,15 +28,11 @@
             <tr>
                 <td>
                     <div class="form-group">
-
-                        <select name="empGen" formControlName="empGen" class="form-control"
-                            pTooltip="Gender of the Employee"
-                            [ngClass]="{ 'is-invalid': submitted && f.empGen.errors }">
-                            <option value="">Gender</option>
-                            <option value="female">Female</option>
-                            <option value="Male">Male</option>
-                            <option value="trans">Trans</option>
-                        </select>
+                        <p-dropdown [options]="genders" class="form-control" placeholder="Gender of the Employee"
+                            [(ngModel)]="empGen" [virtualScroll]="false" name="empGen" formControlName="empGen"
+                            pTooltip="Gender of the Employee" [ngClass]="{ 'is-invalid': submitted && f.empGen.errors }"
+                            optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+                        </p-dropdown>
                         <div *ngIf="submitted && f.empGen.errors" class="invalid-feedback">
                             <div *ngIf="f.empGen.errors.required">Gender is required</div>
                         </div>
@@ -138,14 +134,7 @@
                 </p-cellEditor>
             </td>
             <td pEditableColumn>
-                <p-cellEditor>
-                    <ng-template pTemplate="input">
-                        <input pInputTextpTooltip="Email of the employee" [(ngModel)]="employee.email" email>
-                    </ng-template>
-                    <ng-template pTemplate="output">
-                        {{employee.email}}
-                    </ng-template>
-                </p-cellEditor>
+                {{employee.email}}
             </td>
             <td pEditableColumn>
                 <p-cellEditor>
