--- a/src/app/adm-home/room-management/room-management.component.html
+++ b/src/app/adm-home/room-management/room-management.component.html
@@ -1,19 +1,6 @@
-<table class="table table-bordered table-striped" style="width: 45%">
-  <tr>
-    <td><button class="btn btn-success" pTooltip="Create a new Room" (click)="startCreateRoom()">Create Room</button>
-    </td>
-    <td><button class="btn btn-success" pTooltip="Create multiple rooms of same configuration"
-        (click)="startCreateMultipleRooms()">Create Multiple Rooms</button></td>
-    <td><button class="btn btn-success" pTooltip="View All rooms" (click)="getAllRooms()">Query All Rooms</button></td>
-    <td><button class="btn btn-success" pTooltip="View All Free Rooms"
-        (click)="getRoomsByStatus(constants.VACANT)">Query Free Rooms</button></td>
-    <td><button class="btn btn-success" pTooltip="View All Booked Rooms"
-        (click)="getRoomsByStatus(constants.OCCUPIED)">Query Booked Rooms</button></td>
-  </tr>
-</table>
 <div class="float-right">
   <form [formGroup]="createRoomForm" (ngSubmit)="createRoom()">
-    <table id="createRoom" class="table table-striped" style="width: 50%;display: none;">
+    <table id="createRoom" class="table table-striped">
       <thead>
         <tr>
           <th>Attribute</th>
@@ -24,33 +11,33 @@
         <tr>
           <th>Type Of Room</th>
           <td>
-            <select formControlName="typeOfRoom" class="form-control" pTooltip="Room Type"
-              [ngClass]="{ 'is-invalid': submitted && f.typeOfRoom.errors }">
-              <option value="">--Select--</option>
-              <option value="AC">Air Conditioned</option>
-              <option value="nonAC">Non AirConditioned</option>
-            </select>
+            <p-dropdown [options]="roomTypes" formControlName="typeOfRoom" class="form-control" pTooltip="Room Type"
+              [ngClass]="{ 'is-invalid': submitted && f.typeOfRoom.errors }" class="form-control"
+              placeholder="Select Room Type" name="typeOfRoom" [(ngModel)]="typeOfRoom" [virtualScroll]="false"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
           </td>
         </tr>
         <tr>
           <th>Model Of Room</th>
           <td>
-            <select formControlName="modelOfRoom" class="form-control" pTooltip="Room Model"
-              [ngClass]="{ 'is-invalid': submitted && f.modelOfRoom.errors }">
-              <option value="">--Select--</option>
-              <option value="DLX">Deluxe</option>
-              <option value="STE">Suite</option>
-            </select>
+            <p-dropdown [options]="roomModels" class="form-control" placeholder="Select Room Model"
+              pTooltip="Room Model" name="modelOfRoom" [(ngModel)]="modelOfRoom" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.modelOfRoom.errors }" formControlName="modelOfRoom"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
           </td>
         </tr>
         <tr>
           <th>Category Of Room</th>
-          <td><select formControlName="categoryOfRoom" class="form-control" pTooltip="Room Category"
-              [ngClass]="{ 'is-invalid': submitted && f.categoryOfRoom.errors }">
-              <option value="">--Select--</option>
-              <option value="SNG">Single</option>
-              <option value="DBL">Double</option>
-            </select>
+          <td>
+
+            <p-dropdown [options]="roomCategoryList" class="form-control" placeholder="Select Room Category"
+              pTooltip="Room Category" name="categoryOfRoom" [(ngModel)]="categoryOfRoom" [virtualScroll]="false"
+              [ngClass]="{ 'is-invalid': submitted && f.categoryOfRoom.errors }" formControlName="categoryOfRoom"
+              optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+            </p-dropdown>
+
           </td>
         </tr>
         <tr>
@@ -65,7 +52,7 @@
             </select>
           </td>
         </tr>
-        <tr *ngIf="createRoomMultipleFlag">
+        <tr>
           <th>Count of Rooms</th>
           <td>
             <input type="text" formControlName="countOfRooms" class="form-control"
@@ -91,7 +78,12 @@
   <ng-template pTemplate="caption">
     <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
     <input type="text" pInputText size="50" placeholder="Global Filter" pTooltip="Global Filter"
-      (input)="roomTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+      (input)="roomTable.filterGlobal($event.target.value, 'contains')" style="width:auto">&nbsp;
+    <button class="btn-primary" pTooltip="View All Free Rooms" (click)="getRoomsByStatus(constants.VACANT)">Free
+      Rooms</button> &nbsp;
+    <button class="btn-primary" pTooltip="View All Booked Rooms" (click)="getRoomsByStatus(constants.OCCUPIED)">Booked
+      Rooms</button> &nbsp;
+    <button class="btn-primary" pTooltip="View All rooms" (click)="getAllRooms()">All Rooms</button>
   </ng-template>
   <ng-template pTemplate="header">
     <tr style="width: inherit">
