--- a/src/app/cust-home/tour-booking/tour-booking.component.html
+++ b/src/app/cust-home/tour-booking/tour-booking.component.html
@@ -20,8 +20,11 @@
                     id="guestCount{{tourPackage.tourPackageName}}" value="2">
             </td>
             <td>
-                <input type="date" pTooltip="Tour Start Date" name="startDate" class="form-control"
-                    id="startDate{{tourPackage.tourPackageName}}">
+                <p-calendar class="form-control" dateFormat="yy-mm-dd" [showIcon]="true" [touchUI]="true"
+                    [showButtonBar]="true" name="startDate" class="form-control"
+                    id="startDate{{tourPackage.tourPackageName}}" pTooltip="Tour Start Date"
+                    placeholder="Date of Travel" [readonlyInput]="true">
+                </p-calendar>
 
             </td>
             <td><button class="btn-primary" pTooltip="Book the Tour Package"
